--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
         <title>Document</title>
         <link rel="stylesheet" href="./styles.css" />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1>Test</h1>
+        </header>
+    </body>
 </html>
