--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>Test</h1>
+            <h1>Test 2</h1>
         </header>
     </body>
 </html>
