add navigation and button to header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     </head>
     <body>
         <header>
+            <button>Click me</button>
             <h1>Test</h1>
+            <nav>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </nav>
         </header>
     </body>
 </html>
